prevent setting hover effect when on mobile

--- a/app/pages/landing.pcss
+++ b/app/pages/landing.pcss
@@ -13,6 +13,7 @@
   position: sticky;
   top: 0;
   background-color: white;
+  z-index: 1;
 }
 
 .divider {
@@ -124,6 +125,7 @@ button:hover {
         transition-duration: 700ms;
         transition-property: opacity;
         transition-timing-function: ease-in-out;
+
       }
 
 
